# system-design-practice

url-shortener/: Cargo.toml  build.rs  flake.nix  test.db
url-shortener/proto/: urlshortener.proto
url-shortener/src/: lib.rs  main.rs
