[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tonic = "0.8.0"
tokio = {version = "1.24.1", features = ["macros", "rt-multi-thread"]}
prost = "0.11.5"
url = "2.2.2"
md5 = "0.7.0"
base62 = "2.0.2"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "sqlite"] }
async-trait = "0.1.57"
hyper = "0.14.23"

[build-dependencies]
tonic-build = "0.8.0"

